[gd_scene load_steps=14 format=3 uid="uid://d2b01vgnufnft"]

[ext_resource type="Script" path="res://new_spikes.gd" id="1_20b83"]
[ext_resource type="Texture2D" uid="uid://nslg6ojad33o" path="res://assets/inimigos/spikes_pisados.png" id="2_1voup"]
[ext_resource type="Texture2D" uid="uid://dv57try0gccuo" path="res://assets/inimigos/spikes_new_full_animation.png" id="3_egpyy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iw8e3"]
atlas = ExtResource("2_1voup")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_njy8r"]
atlas = ExtResource("3_egpyy")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5xjq"]
atlas = ExtResource("3_egpyy")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_awdbr"]
atlas = ExtResource("3_egpyy")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd635"]
atlas = ExtResource("3_egpyy")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdk2v"]
atlas = ExtResource("3_egpyy")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygtdw"]
atlas = ExtResource("3_egpyy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrjue"]
atlas = ExtResource("2_1voup")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_y763j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw8e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw8e3")
}],
"loop": false,
"name": &"activating",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_njy8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5xjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awdbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd635")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdk2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygtdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygtdw")
}],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrjue")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8h4a2"]
size = Vector2(16, 16)

[node name="new_spikes" type="Node2D"]
script = ExtResource("1_20b83")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y763j")
animation = &"damage"
autoplay = "default"

[node name="Checking" type="Area2D" parent="."]

[node name="CheckingBox" type="CollisionShape2D" parent="Checking"]
shape = SubResource("RectangleShape2D_8h4a2")
disabled = true

[node name="Damage" type="Area2D" parent="."]

[node name="DamageBox" type="CollisionShape2D" parent="Damage"]
shape = SubResource("RectangleShape2D_8h4a2")
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Checking" to="." method="_on_checking_area_entered"]
[connection signal="area_exited" from="Checking" to="." method="_on_checking_area_exited"]
